commit #3 connecting backend and frontend

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
     <head>
         <title>Rajavi's Blog</title>
+
+        <!--import bootstrap-->
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+        <!--import font-->
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+
+        <!--import css files-->
+        <link rel="stylesheet" href="{% static 'css/main.css' %}">
     </head>
     <body>
-        
+        <section id="blogList">
+            <div class="container">
+                {% for post in posts %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="..." alt="Card image cap">
+                            <div class="card-body">
+                              <h3 class="card-title">{{ post.title }}</h3>
+                              <h4 class="card-text">Published on {{ post.published_date }}</h4>
+                              <p class="card-text">{{ post.text }}</p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </body>
 </html>
